rodan-client/code/styles/default.css
/* ... */
#region-project-details-panel, #region-collection-item-details-panel {
    height: 50%;
}
.details-panel-title-section {
    background-color: #f2f2f2;
    height: 40px;
}
.details-panel-details-section {
    /* height: 80%; */
    gap: 10px;
    overflow: auto;
    flex-grow: 1;
}
.details-panel-action-btns-section {
    height: 5vh;
    gap: 5px;
    border-top: 2px solid #f2f2f2;
    overflow-x: auto;
    overflow-y: hidden;
    padding: 5px;
}
.details-item-container {
    height: fit-content;
    align-items: flex-start;
    gap: 7px;
}
.content-wrapper.row-content.details-item-container {
    align-items: center;
    height: fit-content;
}
.details-item-value {
    overflow-wrap: anywhere;
    background-color: whitesmoke;
    padding: 3px;
    border-radius: 3px;
    box-sizing: border-box;
}
#select-resourcetype {
    width: 100%;
}
/* Individual workflow runs page */
#individual-workflow-run-container {
    border-radius: 5px;
    overflow: hidden;
}
#workflow-run-details-and-action-btns-container {
    border: 1px solid #efefef;
    height: 30%;
}
#workflow-run-resources-and-run-jobs-container {
    border: 1px solid #efefef;
    height: 64%;
}
#workflow-run-collections-wrapper {
    height: fit-content;
    padding-top: 10px;
}
#region-main_workflowrun_individual_resources {
    padding-top: 20px;
}
#region-main_workflowrun_individual_resources, #region-main_workflowrun_individual_runjobs {
    height: fit-content;
    max-height: 82%;
}


/*//////////////////////////////////////////////////////////////////////////////////////
// Canvas
/////////////////////////////////////////////////////////////////////////////////////// */
#workflow-builder-container {
    border-left: 2px solid #69a3a8;
    box-sizing: border-box;
}
#workflow-builder-navbar {
    height: 50px;
    color: white;
    background-color: #69a3a8;
    position: static;
}
#worlkflow-builder-navbar-content-wrapper {
    gap: 5vw;
    padding: 0px 2vw;
}
#navbar-header {
    display: flex;
    align-items: center;
    width: fit-content;
}
#navbar-workflow-name {
    font-size: 20px;
    text-wrap: nowrap;
}
#data-workflow_status {
    text-wrap: nowrap;
}
#workflow-builder-navbar-btns-wrapper {
    gap: 3vw;
    font-size: 13px;
}
#canvas-wrap
{
    /* flex-grow: 0.9; */
    overflow: hidden;
    padding: 0px;
    height: 100%;
    /* height: -webkit-fill-available; */
}
#canvas-tooltip
{
    position: fixed;
    background-color: #ffff88;
    margin-left: 3px;
    padding: 2px;
    height: auto;
    border-style: solid;
    border-width: 2px;
    width: auto;
    visibility: hidden;
    display: inline-block;
}
canvas#canvas-workspace
{
    background-color: var(--background-color-workflowbuilder-workspace);
    padding: 0px;
}
canvas[resize] {
    width: 100%;
    height: 100%;
}
/* Input fields */
.vertical-center {
    height: calc(var(--height-top) * 1%); /*fallback */
    height: calc(var(--height-top) * 1vh);
    display: flex;
    align-items: center;
}
.horizontal-center
{
    width: 100%;
    text-align: center;
}
div.top {
    height: calc(var(--height-top) * 1%); /*fallback */
    height: calc(var(--height-top) * 1vh);
}
div.gui {
    height: calc(var(--height-gui) * 1%); /*fallback*/
    height: calc(var(--height-gui) * 1vh);
    display: flex;
    flex-direction: column;
}
div#main_workflowbuilder
{
    background-color: white;
    height: 100%;
    overflow: auto;
}
.instruction
{
    font-style: italic;
}

/* ------------------------------------ */
/* ----------- Modal Styles ----------- */
/* ------------------------------------ */

@keyframes fade-in {
    from {opacity: 0;}
    to {opacity: 1;}
}

/* general modal styles */
#modal-generic {
    position: absolute;
    width: initial;
    height: initial;
    max-width: 1200px;
    min-width: 500px;
    background-color: #ffffff90;
    box-shadow: 0px 0px 5000px 5000px #0000005c;
    z-index: 9999;
    border-radius: 5px;
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(20px);
    overflow: hidden;
    display: none;
    animation: fade-in 0.2s ease-in-out forwards;
}
.modal-dialog {
    width: fit-content;
    height: fit-content;
    border-radius: 3px;
    position: relative;
    overflow: hidden;
    background-color: white;
    backdrop-filter: blur(20px);
    min-width: 500px;
    /* min-height: 300px; */
}
.modal-header {
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    box-sizing: border-box;
    background-color: #488bcb;
    color: white;
    font-size: 15px;
    height: 40px;
}
.modal-close {
    cursor: pointer;
}
.modal-body
{
    max-height: 600px;
    overflow-y: auto;
    padding: 20px;
    box-sizing: border-box;
    font-size: 12px;
}
.modal-body-section {
    align-items: flex-start;
}
.modal-subtitle-container {
    height: 30px;
}
.modal-subtitle {
    font-size: 13px;
    font-weight: bold;
}
.modal-footer
{
    padding: 10px;
    max-height: 40px;
    height: fit-content;
}
.modal-footer-error, .modal-input-error
{
    color: #aa0000;
}
.modal-body-section-left {
    align-items: flex-start;
}

/* project-users modal styles */
#admins-and-workers-tables {
    align-items: flex-start;
    gap: 25px;

    .table-responsive {
        width: 100%;
    }
}

/* user preferences modal */
#checkbox-send_email {
    flex-grow: 0; /* overwrite general input element styles (which have flex-grow value of 1) */
}

/* resource assignment modal */
#resource-assignment-actions-container {
    height: fit-content;
    padding: 5px;
    border: 1px solid #cecece;
    border-radius: 3px;
    background-color: #f9f9f9;
    max-width: 150px;
}

/* job settings modal */
#workflowjob-settings:first-child {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

#workflowjob-settings {

}

.this-is-my-class {
    background-color: green;
}
/* ... */

